[gd_scene load_steps=14 format=3 uid="uid://d1ybh1x5d4q1v"]

[ext_resource type="Script" path="res://ghost.gd" id="1_mrcx0"]
[ext_resource type="Texture2D" uid="uid://bhctbjcsodj2d" path="res://assets/SGQ_Enemies_v1_0_0/SGQ_Enemies/normal/16x16/ghost.png" id="1_v3ifq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e4ivs"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nqn71"]
atlas = ExtResource("1_v3ifq")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kxin"]
atlas = ExtResource("1_v3ifq")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o467m"]
atlas = ExtResource("1_v3ifq")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r20p"]
atlas = ExtResource("1_v3ifq")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6ikj"]
atlas = ExtResource("1_v3ifq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqmc3"]
atlas = ExtResource("1_v3ifq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hxlu"]
atlas = ExtResource("1_v3ifq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jr0la"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqn71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kxin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o467m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r20p")
}],
"loop": true,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6ikj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqmc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hxlu")
}],
"loop": true,
"name": &"Ghost_Chase",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xd27l"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4m4rp"]
radius = 30.0167

[node name="ghost" type="CharacterBody2D"]
script = ExtResource("1_mrcx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e4ivs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jr0la")
animation = &"Ghost_Chase"

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_xd27l")

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_4m4rp")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
